Fix filter appearance on mobile, hopefully

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -25,6 +25,7 @@ button {
   padding: 0.25rem;
   font-family: 'Courier', 'Helvetica', sans-serif;
   border: none;
+  background-color: #fff;
 }
 
 pre {
